--- a/historia.html
+++ b/historia.html
@@ -44,8 +44,11 @@
 
          </div>
     </div>
+   <div>
 <a href="dino/index.html"><button id="startbutton2"  class="startbutton2">Jogar</button></a>
-    
+<a href="index.html"> <img src="imagens/seta.png" width="45" height="45" class="seta"> </a>
+</div>
+
    </div>
    
    <script src="js/script.js"></script>
