--- a/cadastro.html
+++ b/cadastro.html
@@ -15,6 +15,11 @@
         <img src="imagens/icone menu.png" alt="Ícone 2" class="icon">
     </div>
     <div class="outer-container">
+        
+        <div id="Voltar" class="Voltar">
+            <a href="index.html"><img src="imagens/seta.png" class="Voltar"></a>
+        </div>
+
         <div class="container3">
             <h2>Cadastro</h2>
             <form id="cadastroForm">
