--- a/cadastro.html
+++ b/cadastro.html
@@ -11,6 +11,12 @@
         Cadastro realizado com sucesso!
     </div>
     <div class="icon-container">
+        
+        <audio class="musica" controls autoplay loop>
+            <source src="Musica e efeito/musica certa.mp3" type="audio/mpeg">
+            Seu navegador não suporta o elemento de áudio.
+           </audio>
+
         <img src="imagens/icone perfil.png" alt="Ícone 1" class="icon">
         <img src="imagens/icone menu.png" alt="Ícone 2" class="icon">
     </div>
