--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div class="background"></div>
 
     <div class="container">
+      
+      <audio class="musica" controls autoplay loop>
+         <source src="Musica e efeito/musica certa.mp3" type="audio/mpeg">
+         Seu navegador não suporta o elemento de áudio.
+        </audio>
 
       <div>
          
