--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,13 @@
            </audio>
 
         <img src="imagens/icone perfil.png" alt="Ícone 1" class="icon">
-        <img src="imagens/icone menu.png" alt="Ícone 2" class="icon">
+        <div id="submenu" class="submenu2">
+
+            <img src="imagens/SON 2.png" height="40" width="40" class="musica" alt="Botão de Volume">
+        
+            <img src="imagens/SOM 1.png" height="40" width="40" class="efeito" alt="Botão de Efeitos Sonoros">
+       
+         </div>
     </div>
     <div class="outer-container">
         <div class="container3">
