--- a/cadastro.html
+++ b/cadastro.html
@@ -12,10 +12,10 @@
     </div>
     <div class="icon-container">
         
-        <audio class="musica" controls autoplay loop>
+        <audio class="musica1" controls autoplay loop>
             <source src="Musica e efeito/musica certa.mp3" type="audio/mpeg">
             Seu navegador não suporta o elemento de áudio.
-           </audio>
+        </audio>
 
         <img src="imagens/icone perfil.png" alt="Ícone 1" class="icon">
         <div id="submenu" class="submenu2">
