--- a/historia.html
+++ b/historia.html
@@ -13,10 +13,12 @@
     <div class="background"></div>
 
     <div class="container">
-      <audio class="musica" controls autoplay loop>
+
+      <audio class="musica1" controls autoplay loop>
          <source src="Musica e efeito/musica certa.mp3" type="audio/mpeg">
          Seu navegador não suporta o elemento de áudio.
-        </audio>
+      </audio>
+
       <div class="Perfil">
          <a href="cadastro.html"><img src="imagens/PERFIL.png" alt="Perfil1"  class="icon"  width="45" height="45"> </a>
       </div>
